fonts and footer

--- a/app/src/home.css
+++ b/app/src/home.css
@@ -1,3 +1,12 @@
+
+/* ///////Fonts///////// */
+/* font-family: 'Allura', cursive;
+font-family: 'Crimson Text', serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Lobster', cursive;
+font-family: 'Cinzel', serif; */
+
+
 .homeJumbotron {
     height: 70vh;
     /* width: 100vh; */
@@ -14,7 +23,10 @@
 }
 
 .headFont {
-    font-family: 'Crimson Text', serif;
+    /* font-family: 'Crimson Text', serif; */
+    /* font-family: 'Allura', cursive; */
+    /* font-family: 'Lobster', cursive; */
+    font-family: 'Cinzel', serif;
 }
 
 body {
@@ -46,6 +58,18 @@ body {
     margin-left: calc(0 * var(--bs-gutter-x));
 }
 
+.container, .container-fluid,
+.container-lg, .container-md, 
+.container-sm, .container-xl, 
+.container-xxl {
+    -bs-gutter-x: 0;
+}
+
 .menuRow {
     width: 100vw;
+}
+
+.header {
+    margin-left: 10vh;
+    font-size: 8vh;
 }
