--- a/app/src/home.css
+++ b/app/src/home.css
@@ -8,7 +8,7 @@ font-family: 'Cinzel', serif; */
 
 
 .homeJumbotron {
-    height: 70vh;
+    height: 75vh;
     /* width: 100vh; */
     /* background-color: grey; */
     background-image: url('./images/seafoodpalace.png');
@@ -52,6 +52,7 @@ body {
 
 .logo {
     height: 10vh;
+    opacity: 0.8;
 }
 
 .row  {
@@ -72,4 +73,29 @@ body {
 .header {
     margin-left: 10vh;
     font-size: 8vh;
+}
+
+.fa {
+    text-decoration: none;
+    font-size: 3vh;
+    margin-right: 5vw;
+}
+
+footer {
+    position: fixed;
+    /* height: 100px; */
+    background-color: #CDC6BF;
+    bottom: 0;
+    left: 0vw;
+    width: 100vw;
+    height: 10vh;
+}
+
+.footerRow {
+    width: 100vw;
+    background-color: #CDC6BF;
+}
+
+.footerContainer {
+    width: 100vw;
 }
