opacity not fixed

--- a/app/src/home.css
+++ b/app/src/home.css
@@ -177,5 +177,9 @@ transition-duration: 1000ms;
 }
 
 .img2 {
-    width: 200px;
+    width: 300px;
 }
+
+/* .fa-cart-shopping {
+    height: 3px;
+} */
